k8s/apps/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: "${ACM_CERT_ARN}"
    alb.ingress.kubernetes.io/healthcheck-path: /wp-login.php
    alb.ingress.kubernetes.io/group.name: wordpress
    external-dns.alpha.kubernetes.io/hostname: "${APP_FQDN}"
spec:
  ingressClassName: alb
  rules:
    - host: "${APP_FQDN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-wordpress
                port:
                  number: 80
